@@ -7,9 +7,16 @@ class simp_options::openssl::params (
 ) {
   assert_private()
   include '::simp_options'
+
   if $::simp_options::fips or $facts['fips_enabled'] {
-    $cipher_suite = ['FIPS', '!LOW']
-  } else {
+    if $facts['fips_ciphers'] {
+      $cipher_suite = $facts['fips_ciphers']
+    }
+    else {
+      fail('$facts[\'fips_ciphers\'] not found')
+    }
+  }
+  else {
     $cipher_suite = ['DEFAULT', '!MEDIUM']
   }
 }
