@@ -36,5 +36,15 @@
       ]
     }
   ],
+  "requirements": [
+    {
+      "name": "puppet",
+      "version_requirement": ">= 4.7.0"
+    },
+    {
+      "name": "pe",
+      "version_requirement": ">= 2016.4.0"
+    }
+  ],
   "data_provider": "hiera"
 }
